# battle_sim

./: .gitignore  .gitmodules  CMakeLists.txt  go.mod  output.json  setup.sh
assets/: 1v1.json
cli/: BaseUnit.cpp  BaseUnit.hpp  Point.hpp  SwordSoldier.cpp  SwordSoldier.hpp  UnitsPool.cpp  UnitsPool.hpp  main.cpp  variant.hpp
client/: main.go
player/: main.cpp
server/: main.go
shared/: BaseUnit.cpp  BaseUnit.hpp  user.go
